# $Id: Makefile.am,v 1.4 2007/11/06 19:25:12 rikster5 Exp $

# install blank pdb files
pdbdir = $(datadir)/$(PACKAGE)

pdb_DATA = DatebookDB.pdb \
           CalendarDB-PDat.pdb \
           AddressDB.pdb \
           ContactsDB-PAdd.pdb \
           ToDoDB.pdb \
           TasksDB-PTod.pdb \
           MemoDB.pdb \
           MemosDB-PMem.pdb \
           Memo32DB.pdb \
           ExpenseDB.pdb

EXTRA_DIST = $(pdb_DATA)
