# $Id: Makefile.am,v 1.5 2009/07/31 16:46:16 rikster5 Exp $

# install blank pdb files
pdbdir = $(datadir)/$(PACKAGE)

pdb_DATA = DatebookDB.pdb \
           CalendarDB-PDat.pdb \
           AddressDB.pdb \
           ContactsDB-PAdd.pdb \
           ToDoDB.pdb \
           TasksDB-PTod.pdb \
           MañanaDB.pdb \
           MemoDB.pdb \
           MemosDB-PMem.pdb \
           Memo32DB.pdb \
           ExpenseDB.pdb

EXTRA_DIST = $(pdb_DATA)

