# install blank pdb files
pdbdir = $(datadir)/$(PACKAGE)

pdb_DATA = DatebookDB.pdb \
           CalendarDB-PDat.pdb \
           AddressDB.pdb \
           ContactsDB-PAdd.pdb \
           ToDoDB.pdb \
           TasksDB-PTod.pdb \
           MañanaDB.pdb \
           MemoDB.pdb \
           MemosDB-PMem.pdb \
           Memo32DB.pdb \
           ExpenseDB.pdb

EXTRA_DIST = $(pdb_DATA)

